<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context="com.example.event_details.screen.EventDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:menu="@menu/event_details_toolbar_menu"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/Base.Theme.SimbirSoftMobile"
        app:titleTextColor="?attr/colorOnPrimary">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbarTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/event"
            android:theme="@style/ToolbarTitle"
            tools:text="Новости" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/eventDetailsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/event_details_padding">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/titleTV"
                    style="@style/EventDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/event_details_elements_margin_vertical"
                    tools:text="Спонсоры отремонтируют школу-интернат" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/remainDateLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_elements_margin_vertical"
                    android:gravity="start|center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/event_details_icon_size"
                        android:layout_height="@dimen/event_details_icon_size"
                        android:src="@drawable/ic_calendar"
                        app:tint="@color/grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/remainDateTV"
                        style="@style/EventDetailsDateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        tools:text="Осталось 13 дней (21.09 – 20.10)" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/organizerNameTV"
                    style="@style/OrganizerNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_elements_margin_vertical"
                    android:textAlignment="center"
                    tools:text="Благотворительный Фонд «Счастливый Мир»" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_elements_margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/event_details_icon_size"
                        android:layout_height="@dimen/event_details_icon_size"
                        android:src="@drawable/ic_location"
                        app:tint="@color/blue_grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/addressTV"
                        style="@style/EventDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Санкт-Петербург, Кирочная улица,
д. 50А, каб. 208" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_elements_margin_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/event_details_icon_size"
                        android:layout_height="@dimen/event_details_icon_size"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/blue_grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/phoneTV"
                        style="@style/EventDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        tools:text="+7 (937) 037 37-73\n+7 (937) 016 16-16" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/event_details_icon_size"
                        android:layout_height="@dimen/event_details_icon_size"
                        android:src="@drawable/ic_mail"
                        app:tint="@color/blue_grey" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/EventDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_you_have_questions"
                        android:textAlignment="center" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/sendEmailTV"
                        style="@style/EventClickableText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/event_details_horizontal_text_space"
                        android:clickable="true"
                        android:text="@string/write_us_underline"
                        android:textAlignment="center" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/previewIV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                    android:adjustViewBounds="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/descriptionTV"
                    style="@style/EventDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/event_details_sections_margin_bottom"
                    tools:text="Участники и болельщики смогли весело и активно провести время на «Петербургском благотворительном марафоне» и при этом финансово поучаствовать в помощи детям." />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/organizerUrlTV"
                    style="@style/EventClickableText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/go_to_organizer"
                    android:textAlignment="center" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/white_grey"
        app:layout_constraintBottom_toTopOf="@id/helpLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/helpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/thingsIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/help_icon_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_shirt" />

            <TextView
                style="@style/IconLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/label_margin_horizontal"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/help_with_things" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="match_parent"
            android:background="@drawable/icon_divider_background"
            app:layout_constraintBottom_toTopOf="@id/helpLayout"
            app:layout_constraintEnd_toEndOf="@id/helpLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/volunteerIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/help_icon_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_hands" />

            <TextView
                style="@style/IconLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/label_margin_horizontal"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/become_volunteer" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="match_parent"
            android:background="@drawable/icon_divider_background"
            app:layout_constraintBottom_toTopOf="@id/helpLayout"
            app:layout_constraintEnd_toEndOf="@id/helpLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/profIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/help_icon_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_tools" />

            <TextView
                style="@style/IconLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/label_margin_horizontal"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/prof_help" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:layout_width="@dimen/divider_height"
            android:layout_height="match_parent"
            android:background="@drawable/icon_divider_background"
            app:layout_constraintBottom_toTopOf="@id/helpLayout"
            app:layout_constraintEnd_toEndOf="@id/helpLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/moneyIcon"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="@dimen/help_icon_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_coins" />

            <TextView
                style="@style/IconLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/label_margin_horizontal"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="2"
                android:minLines="2"
                android:text="@string/help_with_money" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        style="@style/CircularProgressIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/errorTV"
        style="@style/ScreenH2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ADSDASD ASD ASD ASD ASD" />

</androidx.constraintlayout.widget.ConstraintLayout>